Se agrego el forms "frmDetalleProducto" para las operaciones de grabar y eliminar, recorrido desde Inventario-Catagolo-Gestion de Producto - Doble click a un producto.

--- a/MdInventarios/frmGestionProductos.resx
+++ b/MdInventarios/frmGestionProductos.resx
@@ -183,6 +183,9 @@
   <metadata name="stockConcatenado.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="StockExistenteNum.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="StockMinimo.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
